tests/semantic_analysis/error/variable_redefine.c
variable_redefine\.c:2:9: error:.*